ORC-415: [C++] Fix writing ColumnStatistics